tests/snapshots/cli__pull_artefact_replace_stdout.snap
---
source: tests/cli.rs
assertion_line: 214
expression: redact_shas(&out.stdout)
---
Pulling latest changes...
  ok    meta/app (artefact [sha])
