tests/snapshots/cli__pull_artefact_up_to_date_stdout.snap
---
source: tests/cli.rs
expression: redact_shas(&out.stdout)
---
Pulling latest changes...
  ok    meta/app (artefact [sha], up to date)
