tests/snapshots/cli__pull_fresh_stdout.snap
---
source: tests/cli.rs
assertion_line: 148
expression: out.stdout
---
Pulling latest changes...
  ok    libs/mylib
