tests/snapshots/cli__pull_readwrite_stdout.snap
---
source: tests/cli.rs
assertion_line: 417
expression: out.stdout
---
Pulling latest changes...
  ok    libs/mylib
