tests/snapshots/cli__pull_twice_stdout.snap
---
source: tests/cli.rs
assertion_line: 280
expression: out.stdout
---
Pulling latest changes...
  ok    libs/mylib
