tests/snapshots/cli__push_readwrite_stdout.snap
---
source: tests/cli.rs
assertion_line: 480
expression: out.stdout
---
Pushing local changes...
  ok    libs/mylib
