tests/snapshots/cli__push_skip_artefact_stdout.snap
---
source: tests/cli.rs
expression: out.stdout
---
Pushing local changes...
  skip  meta/app (artefact)
