tests/snapshots/cli__push_skip_readonly_stdout.snap
---
source: tests/cli.rs
expression: out.stdout
---
Pushing local changes...
  skip  libs/rolib (readonly)
