tests/snapshots/cli__status_artefact_missed_stdout.snap
---
source: tests/cli.rs
assertion_line: 1152
expression: plain
---
    REPO       PATH   ARTEFACT   REF   EXPECTED   STATUS
✘   meta/app   -      replace    —     main       missed
