tests/snapshots/cli__status_artefact_ok_stdout.snap
---
source: tests/cli.rs
assertion_line: 1178
expression: plain
---
    REPO       PATH   ARTEFACT   REF       EXPECTED   STATUS
✔   meta/app   -      replace    [sha]   main       ok
