tests/snapshots/cli__status_json_output.snap
---
source: tests/cli.rs
assertion_line: 1127
expression: parsed
---
[
  {
    "ahead": 0,
    "artefact_use": "-",
    "behind": 0,
    "class": "any",
    "clean": true,
    "current_ref": "[ref]",
    "declared_ref": "main",
    "detached": true,
    "directory": "libs/mylib",
    "exists": true,
    "expected_ref": "main",
    "foreign": false,
    "implicit": false,
    "kind": "source",
    "notes": [],
    "pinned_by": null,
    "reason": "only",
    "requests": [
      {
        "ahead": false,
        "chain": [],
        "commit": "[commit]",
        "directory": "libs/mylib",
        "from": "root",
        "missing": false,
        "override": false,
        "overruled_by": null,
        "revision": "main",
        "revision_kind": "branch",
        "selected": true
      }
    ],
    "resolution": "only",
    "resolved_commit": "[commit]",
    "resolved_ref": "main",
    "revision_kind": "branch",
    "stale": false,
    "symlink": false,
    "symlink_target": "",
    "topic": null,
    "unread": null,
    "unresolved": null,
    "untracked_links": []
  }
]
